# gdl

./: .gitignore  README.md  gallery-dl.conf  main.py  pyproject.toml  x.txt
goal-1/: 0-loop.md  0-plan.md  0-prompt.md  1-GUARDRAILS.md  10-ROLLOUT.md  2-STATE.md  3-DISCOVERY.md  4-RESOLVER.md  5-SCHEDULER.md  6-PACING.md  7-RECOVERY.md  8-MEDIA.md  9-READOUT.md
goal-2/: 0-loop.md  0-plan.md  0-prompt.md  1-EVIDENCE.md  10-ROLLOUT.md  2-CHARACTERIZE.md  3-SPEC.md  4-STATE.md  5-FETCHER.md  6-ORCHESTRATE.md  7-RECOVERY.md  8-READOUT.md  9-VERIFY.md
goal-3/: 0-loop.md  0-plan.md  0-prompt.md  1-FLOWMAP.md  10-ROLLOUT.md  2-LIFECYCLE.md  3-DETECT.md  4-ENGINES.md  5-SEEDING.md  6-ORCHESTRATE.md  7-RECOVERY.md  8-UX.md  9-VERIFY.md
scripts/: archive-x  archive-x-context  archive-x-legacy  archive_x.py  archive_x_context.py  archive_x_legacy.py  archive_x_unified.py  check-x-firefox-cookies  gallery_dl_x_legacy_runner.py  gallery_dl_x_runner.py  gdl  open-x-firefox-login  save-x-cookies  setup-bibliotheque-automount
tests/: test_archive_x.py  test_archive_x_context.py  test_archive_x_legacy.py  test_archive_x_recovery.py  test_archive_x_unified.py  test_gallery_dl_x_legacy_runner.py  test_gallery_dl_x_runner.py
tests/fixtures/: x_legacy_transition.json
